--- a/angular/appHeroes/src/app/components/shared/navbar/navbar.component.html
+++ b/angular/appHeroes/src/app/components/shared/navbar/navbar.component.html
@@ -19,8 +19,9 @@
           </li>
       </ul>
       <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-primary" type="submit">Search</button>
+        <input class="form-control me-2" type="search" placeholder="Buscar Héroe"
+        (keyup.enter)="buscarHeroe(buscarTexto.value)" #buscarTexto>
+        <button (click)="buscarHeroe(buscarTexto.value)" class="btn btn-outline-primary" type="submit">Buscar</button>
       </form>
     </div>
   </nav>
