--- a/angular/appMapaLocalStorage/src/app/components/mapa/mapa.component.html
+++ b/angular/appMapaLocalStorage/src/app/components/mapa/mapa.component.html
@@ -3,7 +3,7 @@
     <mat-card-content>
         <agm-map (mapClick)="agregarMarcador($event)"
                  [latitude]="lat" [longitude]="lng" [zoom]="15">
-            <agm-marker *ngFor="let marcador of marcadores"
+            <agm-marker *ngFor="let marcador of marcadores; let i = index"
                         [latitude]="marcador.lat" 
                         [longitude]="marcador.lng">
                 <agm-info-window>
@@ -11,8 +11,10 @@
 
                     <p>{{ marcador.desc }}</p>
                     <div>
-                        <button mat-raised-button color ="primary">Editar</button>
-                        <button mat-raised-button color ="warn">Eliminar</button>
+                        <button (click)="editarMarcador(marcador)"
+                        mat-raised-button color ="primary">Editar</button>
+                        <button (click)="borrarMarcador(i)"
+                        mat-raised-button color ="warn">Eliminar</button>
                     </div>
                 </agm-info-window>
             </agm-marker>
