--- a/angular/appMapaLocalStorage/src/app/components/mapa/mapa-editar.component.html
+++ b/angular/appMapaLocalStorage/src/app/components/mapa/mapa-editar.component.html
@@ -1,10 +1,16 @@
-<form class="example-form">
+<form [formGroup]="forma">
     <mat-form-field>
-      <input matInput placeholder="Título">
+      <input matInput placeholder="Título" formControlName="titulo">
     </mat-form-field>
   
     <mat-form-field>
-      <textarea rows="3" matInput placeholder="Descripción"></textarea>
+      <textarea rows="3" matInput placeholder="Descripción" formControlName="desc"></textarea>
     </mat-form-field>
 </form>
+  <div>
+    <button (click)="guardarCambios()"
+            mat-raised-button color="primary">Guardar</button>
+    <button (click)="onNoClick()"
+            mat-raised-button color="warn">Cancelar</button>
+</div>
   
