--- a/angular/appMapaLocalStorage/src/app/components/mapa/mapa.component.html
+++ b/angular/appMapaLocalStorage/src/app/components/mapa/mapa.component.html
@@ -13,8 +13,7 @@
                     <div>
                         <button (click)="editarMarcador(marcador)"
                         mat-raised-button color="primary">Editar</button>
-                        <button (click)="borrarMarcador(i)"
-                        mat-raised-button color="warn">Eliminar</button>
+                        <button (click)="borrarMarcador(i)" mat-raised-button color="warn">Eliminar</button>
                     </div>
                 </agm-info-window>
             </agm-marker>
